--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts"
   },
